<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/passwordPairingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/password_pairing_intro"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/fastPairServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="url"
        android:hint="@string/password_pairing_server"
        android:inputType="textUri"
        android:singleLine="true" />

    <EditText
        android:id="@+id/fastPairUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/password_pairing_username"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/fastPairPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password_pairing_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnPasswordPair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_pairing_action" />
</LinearLayout>
